Update Docker config and fix import paths
The changes reorganize the project structure, update Docker setup, and
fix import paths to work with the new layout. The main app code is now
under an /app directory with relative imports, and the Docker container
exposes port 5000.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
-  personal-assistant-client:
-    image: personal-assistant-mcp-client
+  personal-assistant-agent:
+    image: personal-assistant-agent
     build: .
     env_file:
       - ./.env
+    ports:
+      - 5000:5000
