Update Gemini model version and simplify Docker watch paths
The changes switch from Gemini 2.5 Pro to 2.0 Flash and consolidate the
Docker file watching to just monitor the app directory.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,11 +5,7 @@ services:
       - ./.env
     develop:
       watch:
-        - path: ./assistant_agent/
-          action: rebuild
-        - path: ./chatbot/
-          action: rebuild
-        - path: ./main.py
+        - path: ./app/
           action: rebuild
         - path: ./docker-compose.yml
           action: rebuild
