Add CI/CD workflow for production deployment
The workflow syncs code to VPS via rsync and deploys using Docker
Compose, excluding virtual environment and IDE files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
   personal-assistant-agent:
     image: personal-assistant-agent
+    container_name: agent
     build: .
     env_file:
       - ./.env
     ports:
-      - 5000:5000
+      - 8000:8000
