--- a/.github/workflows/production-workflow.yml
+++ b/.github/workflows/production-workflow.yml
@@ -17,6 +17,14 @@ jobs:
       - name: 📥 Checkout do código
         uses: actions/checkout@v4
 
+      - name: 🛠️ Instalar uv
+        run: python -m pip install uv
+
+      - name: 🧪 Rodar testes
+        run: |
+          uv pip install -e .[test]
+          uv run -m pytest -q
+
       - name: 📦 Sincronizar arquivos com a VPS (via rsync)
         run: |
           rsync -avz --exclude-from='.rsync-exclude' ./ \
