--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     build: .
     env_file:
       - ./.env
+    environment:
+      - SERVICE_PORT=${SERVICE_PORT:-8000}
     ports:
-      - 8000:8000
+      - ${SERVICE_PORT:-8000}:${SERVICE_PORT:-8000}
