--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "uvicorn>=0.35.0",
 ]
+
+[project.optional-dependencies]
+test = ["pytest>=8.4"]
