--- a/.github/workflows/production-workflow.yml
+++ b/.github/workflows/production-workflow.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: 🧪 Rodar testes
         run: |
-          uv sync --locked
+          uv sync
           uv run -m pytest -q
 
       - name: 📦 Sincronizar arquivos com a VPS (via rsync)
